Prevent the first two columns of the doc tables from wrapping

--- a/server/docs/custom-style.css
+++ b/server/docs/custom-style.css
@@ -12,4 +12,5 @@ table {
 table tr > :nth-child(1),
 table tr > :nth-child(2) {
 	padding-right: 15px;
+	white-space: nowrap;
 }
